# Libreria-dodo

./: LICENSE  README.md  setup.cfg  setup.py
libreria dodo-0.0.3/: README.md
libreria dodo-0.0.8/: README.md  setup.cfg
src/complubot/: libreria_dodo.py
src/libreria_dodo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
