[metadata]
name = libreria dodo
version = 0.0.4
author = Complubot
author_email = info@complubot.com
description = Libreria para la placa dodo y dodo lite
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Complubot/Libreria-dodo
project_urls = 
	Bug Tracker = https://github.com/Complubot/Libreria-dodo/issues
classifiers = 
	Programming Language :: Python :: Implementation :: MicroPython
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

